jsdialog: fix buttons alignment

--- a/loleaflet/css/btns.css
+++ b/loleaflet/css/btns.css
@@ -75,3 +75,7 @@
 .ui-button-box .jsdialog.ui-pushbutton {
 	display: initial !important;
 }
+
+.jsdialog.ui-button-box-right {
+	display: flex;
+}
